Correct menu colour and entry alignment when featured image is present.

--- a/sass/site/header/_site-featured-image.scss
+++ b/sass/site/header/_site-featured-image.scss
@@ -16,6 +16,7 @@
 	.social-navigation a,
 	.site-title a,
 	.site-featured-image a {
+		color: #fff;
 		transition: opacity $link_transition ease-in-out;
 
 		&:hover,
@@ -108,6 +109,7 @@
 			.entry-meta {
 
 				font-weight: 500;
+				text-align: center;
 
 				> span {
 
